--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color:bisque;
   margin: 0;
   padding: 0;
 }
@@ -68,4 +68,41 @@ form button {
 
 .site-footer {
   padding: 2rem 0;
+}
+
+
+h1{
+  font-size: 3rem;
+}
+h2{
+  font-size: 2rem;
+}
+h3{
+  font-size: 1.5rem;
+}
+
+
+a:focus{
+  outline: 4px solid black;
+}
+
+ul li  a:hover{
+  text-decoration: underline;
+}
+
+.skip-links{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.skip-links a{
+    position: absolute;
+    top: -3em;
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
+.skip-links a:focus{
+  top: 0;
 }
