--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,10 @@ form button {
   text-transform: uppercase;
 }
 
+form button:hover {
+  background-color: cadetblue;
+}
+
 .site-footer {
   padding: 2rem 0;
 }
